--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -41,6 +41,8 @@
     <string name="cars_invalid_input_text">Info incorrecte</string>
     <!-- Text for generic error toolbar-->
     <string name="cars_error_text">Erreur</string>
+    <!-- Text for toolbar on no search results -->
+    <string name="cars_no_results_text">Aucun résultat</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Réserver</string>
     <!-- Text for viewing details-->
@@ -84,12 +86,16 @@
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
     <string name="calendar_car_desc_support_TEMPLATE">Assistance clientèle Expedia : %1$s et %2$s</string>
 
+    <!-- Label for hotel search toolbar -->
+    <string name="hotel_toolbar_title">Recherche d\&apos;hôtels</string>
+    <!-- Label for hotel suggestion -->
+    <string name="search_location">Recherche de destination</string>
     <!-- Label for pickup location selector -->
     <string name="pick_up_location">Lieu de prise en charge</string>
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
-    <string name="same_as_pick_up">Identique au lieu de prise en charge</string>
+    <string name="drop_off_location">Lieu de restitution</string>
     <!-- Label for Car Search Screen header -->
-    <string name="dates_and_location">Dates et lieu</string>
+    <string name="toolbar_search_cars">Recherche de véhicules</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">Sélectionnez les dates de prise en charge et de restitution du véhicule</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
@@ -102,6 +108,25 @@
     <string name="drop_off_same_as_pick_up">Bientôt ! Nous allons ajouter dans une prochaine version l\&apos;option de locations de voiture avec restitution du véhicule dans une autre agence.</string>
     <!-- Car search error -->
     <string name="error_car_search_message">Votre recherche n\&apos;a donné aucun résultat. Veuillez tenter une nouvelle recherche avec des critères différents.</string>
+    <!-- Car no filtered search results -->
+    <string name="filter_no_car_search_results_message">Votre recherche n\&apos;a donné aucun résultat. Veuillez essayer de réduire le nombre de filtres.</string>
+    <!-- Transmission options filter label for a car rental -->
+    <string name="options">Options</string>
+    <!-- Automatic transmission filter button-->
+    <string name="car_filter_automatic">Automatique</string>
+    <!-- Manual transmission filter button-->
+    <string name="car_filter_manual">Manuelle</string>
+    <!-- Any transmission type filter button -->
+    <string name="car_filter_all">Tout</string>
+    <!-- Air conditioning option checkbox filter -->
+    <string name="car_filter_checkbox_air_conditioning">Climatisation</string>
+    <!-- Unlimited mileage option checkbox filter -->
+    <string name="car_filter_checkbox_unlimited_mileage">Kilométrage illimité</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_types">Types de voiture</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_vendors">Agences de location</string>
+
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s ou similaire</string>
@@ -166,6 +191,8 @@
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Hum… Votre paiement n\&apos;a pas été accepté. Veuillez vérifier vos détails de paiement et essayer à nouveau.</string>
+    <!-- Shown to a user when their ability to rent a specific car expires -->
+    <string name="error_cars_product_expired">Votre recherche est arrivée à expiration. Veuillez sélectionner une date/heure de prise en charge valide.</string>
     <!-- Price changed button text that takes you back to checkout -->
     <string name="view_price_change">Voir le nouveau prix</string>
     <!-- My Trips button that takes you to Itins -->
@@ -209,7 +236,7 @@
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
-    <string name="lx_search_widget_heading">Dates et lieu</string>
+    <string name="lx_search_title">Recherche d\&apos;activités</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Choisir la date</string>
     <!-- Activity details highlights heading -->
@@ -536,7 +563,7 @@
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Veuillez saisir vos coordonnées</string>
     <!-- LX search error -->
-    <string name="error_lx_search_message">Votre recherche n\&apos;a donné aucun résultat. Veuillez tenter une nouvelle recherche avec des critères différents.</string> 
+    <string name="error_lx_search_message">Votre recherche n\&apos;a donné aucun résultat. Veuillez tenter une nouvelle recherche avec des critères différents.</string>
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">Nous n\&apos;avons pas été en mesure de déterminer votre emplacement actuel afin de trouver des activités autour de vous.</string> 
     <!-- Text for generic error toolbar-->
@@ -1825,7 +1852,7 @@
     <!-- Taxes and airline fees -->
     <string name="taxes_and_airline_fees">Taxes et frais</string>
     <!-- Expedia booking fee -->
-    <string name="expedia_booking_fee">Frais de réservation Expedia</string>
+    <string name="brand_booking_fee">Frais de réservation {brand}</string>
     <!-- Label for a fee imposed on a flight booking that is due to processing the card -->
     <string name="airline_card_fee">Frais de paiement compagnie</string>
     <!-- Flight -->
@@ -1885,7 +1912,7 @@
     <!-- Born on colored -->
     <string name="born_on_colored_TEMPLATE">Né(e) le %1$s</string>
     <!-- <brand> expiring <date> template -->
-    <string name="brand_expiring_TEMPLATE">&lt;font color="#38597D"&gt;%1$s&lt;/font&gt;, expire fin %2$s</string>
+    <string name="brand_expiring_TEMPLATE">%1$s, expire fin %2$s</string>
 
     <!-- Section edit contact -->
     <!-- name on card hint -->
@@ -2014,7 +2041,7 @@
     <!-- Passport -->
     <string name="passport">Passeport</string>
     <!-- Current traveler - <firstname> <lastname> -->
-    <string name="current_traveler_TEMPLATE">&lt;font color="#38597D"&gt;Voyageur actuel -&lt;/font&gt; %1$s %2$s</string>
+    <string name="current_traveler_TEMPLATE">Voyageur actuel - %1$s %2$s</string>
 
     <!-- Seat types -->
     <!-- Window seating preference -->
@@ -2061,6 +2088,8 @@
     <string name="hotels_in_TEMPLATE">Hôtels à %s</string>
     <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
     <string name="cars_in_TEMPLATE">Voitures à %s</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Activities in San Francisco" -->
+    <string name="lx_in_TEMPLATE">Activités à %s</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">Autres options</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
@@ -2093,7 +2122,6 @@
     <string name="air_attach_add_hotel">Ajouter un hôtel</string>
     <!-- Air attach add hotel button subtitle -->
     <string name="air_attach_with_discounts">avec remises</string>
-
 
 
     <!-- Hotel confirmation page -->
@@ -2145,6 +2173,8 @@
     <string name="accept">Accepter</string>
     <!-- Button label for retrying after getting an error -->
     <string name="retry">Réessayer</string>
+    <!-- Button label for adjusting filters after getting no results -->
+    <string name="edit_filters">Modifier les filtres</string>
     <!-- Button label for calling -->
     <string name="call_support">Assistance</string>
     <!-- Error shown to user if the flight's price has increased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
@@ -2321,6 +2351,8 @@
     <string name="tonight_only">Aujourd\&apos;hui uniquement !</string>
     <!-- Expedia sponsored listing -->
     <string name="sponsored">Lien commercial</string>
+    <!-- Expedia ETP book now/pay later search results -->
+    <string name="book_now_pay_later">Réservez maintenant, payez plus tard</string>
     <!-- Search range error message template. %1$s = max search length. e.g. "We're sorry, but we are unable to search for hotel stays longer than 28 days." -->
     <string name="hotel_search_range_error_TEMPLATE">Désolés, nous ne sommes pas en mesure de rechercher des hôtels pour des séjours de plus de %1$s jours.</string>
     <!-- Search Error title text "Search Error" -->
@@ -2636,8 +2668,6 @@
     <string name="more_info">Plus d\&apos;informations</string>
 
     <!-- Booking info -->
-    <!-- Label for room type -->
-    <string name="room_type">Type de chambre</string>
     <!-- Error if we couldn't find the room type details -->
     <string name="error_room_type_nonexistant">Nous ne sommes pas en mesure de trouver d\&apos;autres informations sur cette chambre.</string>
     <!-- Quantity for the length of stay -->
@@ -2682,8 +2712,6 @@
     <string name="taxes_and_fees">Taxes et frais</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Inclus</string>
-    <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">Frais à régler auprès de l\&apos;hôtel</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Réduction</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
@@ -2884,11 +2912,11 @@
     </plurals>
     <!-- A number of guests (but not including the guest count). Capitalized -->
     <plurals name="number_of_guests_label">
-        <item quantity="zero">Personne</item>
+        <item quantity="zero">Voyageurs</item>
         <item quantity="one">Personne</item>
         <item quantity="two">Personnes</item>
-        <item quantity="many">Personnes</item>
-        <item quantity="other">Personnes</item>
+        <item quantity="many">Voyageurs</item>
+        <item quantity="other">Voyageurs</item>
     </plurals>
     <!-- A number of nights (as in stay duration).  Capitalized -->
     <plurals name="number_of_nights">
