--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -41,6 +41,8 @@
     <string name="cars_invalid_input_text">Informazione non valida</string>
     <!-- Text for generic error toolbar-->
     <string name="cars_error_text">Errore</string>
+    <!-- Text for toolbar on no search results -->
+    <string name="cars_no_results_text">Nessun risultato</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Prenota</string>
     <!-- Text for viewing details-->
@@ -84,12 +86,16 @@
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
     <string name="calendar_car_desc_support_TEMPLATE">Supporto clienti Expedia: %1$s e %2$s</string>
 
+    <!-- Label for hotel search toolbar -->
+    <string name="hotel_toolbar_title">Cerca hotel</string>
+    <!-- Label for hotel suggestion -->
+    <string name="search_location">Cerca destinazione</string>
     <!-- Label for pickup location selector -->
     <string name="pick_up_location">Luogo del ritiro</string>
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
-    <string name="same_as_pick_up">Lo stesso del ritiro</string>
+    <string name="drop_off_location">Riconsegna</string>
     <!-- Label for Car Search Screen header -->
-    <string name="dates_and_location">Date e luogo</string>
+    <string name="toolbar_search_cars">Cerca auto</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">Seleziona le date di ritiro e riconsegna</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
@@ -102,6 +108,25 @@
     <string name="drop_off_same_as_pick_up">Disponibile a breve! Stiamo lavorando per aggiungere l\&apos;opzione di riconsegna in un luogo diverso da quello del ritiro.</string>
     <!-- Car search error -->
     <string name="error_car_search_message">La tua ricerca non ha prodotto risultati. Effettua nuovamente la ricerca impostando parametri diversi.</string>
+    <!-- Car no filtered search results -->
+    <string name="filter_no_car_search_results_message">La tua ricerca non ha prodotto risultati. Riprova usando meno filtri.</string>
+    <!-- Transmission options filter label for a car rental -->
+    <string name="options">Opzioni</string>
+    <!-- Automatic transmission filter button-->
+    <string name="car_filter_automatic">Automatico</string>
+    <!-- Manual transmission filter button-->
+    <string name="car_filter_manual">Manuale</string>
+    <!-- Any transmission type filter button -->
+    <string name="car_filter_all">Tutti</string>
+    <!-- Air conditioning option checkbox filter -->
+    <string name="car_filter_checkbox_air_conditioning">Aria condizionata</string>
+    <!-- Unlimited mileage option checkbox filter -->
+    <string name="car_filter_checkbox_unlimited_mileage">Chilometraggio illimitato</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_types">Tipi di auto</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_vendors">Autonoleggi</string>
+
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s o simili</string>
@@ -166,6 +191,8 @@
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Mmm… Il pagamento non è andato a buon fine. Verifica nuovamente i dettagli di pagamento e riprova.</string>
+    <!-- Shown to a user when their ability to rent a specific car expires -->
+    <string name="error_cars_product_expired">La tua ricerca è scaduta. Seleziona una data o un\&apos;ora di ritiro.</string>
     <!-- Price changed button text that takes you back to checkout -->
     <string name="view_price_change">Mostra la modifica del prezzo</string>
     <!-- My Trips button that takes you to Itins -->
@@ -209,7 +236,7 @@
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
-    <string name="lx_search_widget_heading">Date e luogo</string>
+    <string name="lx_search_title">Cerca attività</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Seleziona data</string>
     <!-- Activity details highlights heading -->
@@ -536,7 +563,7 @@
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Inserisci i contatti</string>
     <!-- LX search error -->
-    <string name="error_lx_search_message">La tua ricerca non ha prodotto risultati. Effettua nuovamente la ricerca impostando parametri diversi.</string> 
+    <string name="error_lx_search_message">La tua ricerca non ha prodotto risultati. Effettua nuovamente la ricerca impostando parametri diversi.</string>
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">Non siamo riusciti a stabilire la tua posizione per localizzare le attività vicine.</string> 
     <!-- Text for generic error toolbar-->
@@ -1825,7 +1852,7 @@
     <!-- Taxes and airline fees -->
     <string name="taxes_and_airline_fees">Tasse e spese di gestione</string>
     <!-- Expedia booking fee -->
-    <string name="expedia_booking_fee">Spese di gestione Expedia</string>
+    <string name="brand_booking_fee">{brand} Costo di prenotazione</string>
     <!-- Label for a fee imposed on a flight booking that is due to processing the card -->
     <string name="airline_card_fee">Commissione sui pagamenti con carta</string>
     <!-- Flight -->
@@ -1885,7 +1912,7 @@
     <!-- Born on colored -->
     <string name="born_on_colored_TEMPLATE">Nato/a %1$s</string>
     <!-- <brand> expiring <date> template -->
-    <string name="brand_expiring_TEMPLATE">&lt;font color="#38597D"&gt;%1$s&lt;/font&gt; con scadenza %2$s</string>
+    <string name="brand_expiring_TEMPLATE">%1$s con scadenza %2$s</string>
 
     <!-- Section edit contact -->
     <!-- name on card hint -->
@@ -2014,7 +2041,7 @@
     <!-- Passport -->
     <string name="passport">Passaporto</string>
     <!-- Current traveler - <firstname> <lastname> -->
-    <string name="current_traveler_TEMPLATE">&lt;font color="#38597D"&gt;Viaggiatore attuale -&lt;/font&gt; %1$s %2$s</string>
+    <string name="current_traveler_TEMPLATE">Viaggiatore attuale -%1$s %2$s</string>
 
     <!-- Seat types -->
     <!-- Window seating preference -->
@@ -2061,6 +2088,8 @@
     <string name="hotels_in_TEMPLATE">Hotel a %s</string>
     <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
     <string name="cars_in_TEMPLATE">Auto a %s</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Activities in San Francisco" -->
+    <string name="lx_in_TEMPLATE">Attività a %s</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">Altre operazioni</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
@@ -2093,7 +2122,6 @@
     <string name="air_attach_add_hotel">Aggiungi hotel</string>
     <!-- Air attach add hotel button subtitle -->
     <string name="air_attach_with_discounts">con lo sconto</string>
-
 
 
     <!-- Hotel confirmation page -->
@@ -2145,6 +2173,8 @@
     <string name="accept">Accetta</string>
     <!-- Button label for retrying after getting an error -->
     <string name="retry">Riprova</string>
+    <!-- Button label for adjusting filters after getting no results -->
+    <string name="edit_filters">Modifica filtri</string>
     <!-- Button label for calling -->
     <string name="call_support">Assistenza</string>
     <!-- Error shown to user if the flight's price has increased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
@@ -2321,6 +2351,8 @@
     <string name="tonight_only">Solo per questa notte!</string>
     <!-- Expedia sponsored listing -->
     <string name="sponsored">Sponsorizzati</string>
+    <!-- Expedia ETP book now/pay later search results -->
+    <string name="book_now_pay_later">Prenota subito, paga in hotel</string>
     <!-- Search range error message template. %1$s = max search length. e.g. "We're sorry, but we are unable to search for hotel stays longer than 28 days." -->
     <string name="hotel_search_range_error_TEMPLATE">Siamo spiacenti, ma non siamo in grado di cercare soggiorni in hotel superiori a %1$s giorni.</string>
     <!-- Search Error title text "Search Error" -->
@@ -2636,8 +2668,6 @@
     <string name="more_info">Maggiori informazioni</string>
 
     <!-- Booking info -->
-    <!-- Label for room type -->
-    <string name="room_type">Tipologia camera</string>
     <!-- Error if we couldn't find the room type details -->
     <string name="error_room_type_nonexistant">Impossibile trovare altri dettagli su questa camera.</string>
     <!-- Quantity for the length of stay -->
@@ -2682,8 +2712,6 @@
     <string name="taxes_and_fees">Tasse e spese di gestione</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Incluse</string>
-    <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">Costi pagati in hotel</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Sconto</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
