--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -41,6 +41,8 @@
     <string name="cars_invalid_input_text">잘못된 정보</string>
     <!-- Text for generic error toolbar-->
     <string name="cars_error_text">오류</string>
+    <!-- Text for toolbar on no search results -->
+    <string name="cars_no_results_text">검색 결과 없음</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">예약</string>
     <!-- Text for viewing details-->
@@ -84,12 +86,16 @@
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
     <string name="calendar_car_desc_support_TEMPLATE">익스피디아 고객 지원: %1$s 및 %2$s</string>
 
+    <!-- Label for hotel search toolbar -->
+    <string name="hotel_toolbar_title">호텔 검색</string>
+    <!-- Label for hotel suggestion -->
+    <string name="search_location">위치 검색</string>
     <!-- Label for pickup location selector -->
     <string name="pick_up_location">인수 위치</string>
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
-    <string name="same_as_pick_up">인수 위치와 동일</string>
+    <string name="drop_off_location">반납</string>
     <!-- Label for Car Search Screen header -->
-    <string name="dates_and_location">날짜 및 위치</string>
+    <string name="toolbar_search_cars">렌터카 검색</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">인수 및 반납 날짜 선택</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
@@ -102,6 +108,25 @@
     <string name="drop_off_same_as_pick_up">제공 예정! 다음 버전에서는 타지점 반납의 편도 예약을 추가하도록 지금 열심히 준비 중입니다.</string>
     <!-- Car search error -->
     <string name="error_car_search_message">검색 결과가 없습니다. 다른 기준으로 다시 검색해 주세요.</string>
+    <!-- Car no filtered search results -->
+    <string name="filter_no_car_search_results_message">검색 결과가 없습니다. 필터 개수를 줄여보세요.</string>
+    <!-- Transmission options filter label for a car rental -->
+    <string name="options">옵션</string>
+    <!-- Automatic transmission filter button-->
+    <string name="car_filter_automatic">자동</string>
+    <!-- Manual transmission filter button-->
+    <string name="car_filter_manual">수동</string>
+    <!-- Any transmission type filter button -->
+    <string name="car_filter_all">모두</string>
+    <!-- Air conditioning option checkbox filter -->
+    <string name="car_filter_checkbox_air_conditioning">에어컨</string>
+    <!-- Unlimited mileage option checkbox filter -->
+    <string name="car_filter_checkbox_unlimited_mileage">무제한 마일리지</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_types">차량 종류</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_vendors">렌터카 회사터카</string>
+
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s 또는 동급 차량</string>
@@ -166,10 +191,12 @@
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">잠시만요… 결제가 제대로 되지 않았어요. 결제 세부 정보를 확인하고 다시 시도해 주세요.</string>
+    <!-- Shown to a user when their ability to rent a specific car expires -->
+    <string name="error_cars_product_expired">수행하신 검색은 만료되었습니다. 유효한 인수 시간을 선택해 주세요.</string>
     <!-- Price changed button text that takes you back to checkout -->
     <string name="view_price_change">가격 변동 보기</string>
     <!-- My Trips button that takes you to Itins -->
-    <string name="my_trips">내 여행</string>
+    <string name="my_trips">내 일정</string>
     <!-- Button text that takes you back to the payment widget to edit your payment -->
     <string name="edit_payment">결제 정보 수정</string>
     <!-- Button text that takes you back to the traveler info widget to edit your driver information -->
@@ -209,7 +236,7 @@
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
-    <string name="lx_search_widget_heading">날짜 및 위치</string>
+    <string name="lx_search_title">즐길거리 검색</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">날짜 선택</string>
     <!-- Activity details highlights heading -->
@@ -536,7 +563,7 @@
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">연락처 정보 입력</string>
     <!-- LX search error -->
-    <string name="error_lx_search_message">검색 결과가 없습니다. 다른 기준으로 다시 검색해 주세요.</string> 
+    <string name="error_lx_search_message">검색 결과가 없습니다. 다른 기준으로 다시 검색해 주세요.</string>
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">고객님 주변의 즐길거리를 찾기 위한 고객님의 현재 위치를 확인할 수 없습니다.</string> 
     <!-- Text for generic error toolbar-->
@@ -1825,7 +1852,7 @@
     <!-- Taxes and airline fees -->
     <string name="taxes_and_airline_fees">세금 및 수수료</string>
     <!-- Expedia booking fee -->
-    <string name="expedia_booking_fee">익스피디아 예약 수수료</string>
+    <string name="brand_booking_fee">{brand} 예약 수수료</string>
     <!-- Label for a fee imposed on a flight booking that is due to processing the card -->
     <string name="airline_card_fee">카드 결제 수수료</string>
     <!-- Flight -->
@@ -1885,7 +1912,7 @@
     <!-- Born on colored -->
     <string name="born_on_colored_TEMPLATE">생년월일: %1$s</string>
     <!-- <brand> expiring <date> template -->
-    <string name="brand_expiring_TEMPLATE">&lt;font color="#38597D"&gt;%1$s&lt;/font&gt; 만료일: %2$s</string>
+    <string name="brand_expiring_TEMPLATE">%1$s 만료일: %2$s</string>
 
     <!-- Section edit contact -->
     <!-- name on card hint -->
@@ -2014,7 +2041,7 @@
     <!-- Passport -->
     <string name="passport">여권</string>
     <!-- Current traveler - <firstname> <lastname> -->
-    <string name="current_traveler_TEMPLATE">&lt;font color="#38597D"&gt;현재 여행객 - &lt;/font&gt; %1$s %2$s</string>
+    <string name="current_traveler_TEMPLATE">현재 여행객 - %1$s %2$s</string>
 
     <!-- Seat types -->
     <!-- Window seating preference -->
@@ -2061,6 +2088,8 @@
     <string name="hotels_in_TEMPLATE">%s 호텔</string>
     <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
     <string name="cars_in_TEMPLATE">%s 렌터카</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Activities in San Francisco" -->
+    <string name="lx_in_TEMPLATE">%s에서의 즐길거리</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">고객 지원 더 보기</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
@@ -2093,7 +2122,6 @@
     <string name="air_attach_add_hotel">호텔 추가</string>
     <!-- Air attach add hotel button subtitle -->
     <string name="air_attach_with_discounts">할인 적용</string>
-
 
 
     <!-- Hotel confirmation page -->
@@ -2145,6 +2173,8 @@
     <string name="accept">계속</string>
     <!-- Button label for retrying after getting an error -->
     <string name="retry">다시 시도</string>
+    <!-- Button label for adjusting filters after getting no results -->
+    <string name="edit_filters">필터 수정</string>
     <!-- Button label for calling -->
     <string name="call_support">고객 지원</string>
     <!-- Error shown to user if the flight's price has increased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
@@ -2321,6 +2351,8 @@
     <string name="tonight_only">오늘 밤 한정!</string>
     <!-- Expedia sponsored listing -->
     <string name="sponsored">스폰서 링크</string>
+    <!-- Expedia ETP book now/pay later search results -->
+    <string name="book_now_pay_later">지금 예약하고 나중에 결제</string>
     <!-- Search range error message template. %1$s = max search length. e.g. "We're sorry, but we are unable to search for hotel stays longer than 28 days." -->
     <string name="hotel_search_range_error_TEMPLATE">죄송합니다. %1$s일을 초과하는 숙박을 위한 호텔은 검색할 수 없습니다.</string>
     <!-- Search Error title text "Search Error" -->
@@ -2636,8 +2668,6 @@
     <string name="more_info">자세히</string>
 
     <!-- Booking info -->
-    <!-- Label for room type -->
-    <string name="room_type">객실 유형</string>
     <!-- Error if we couldn't find the room type details -->
     <string name="error_room_type_nonexistant">죄송합니다. 이 객실에 대한 추가 정보를 찾을 수 없습니다.</string>
     <!-- Quantity for the length of stay -->
@@ -2682,8 +2712,6 @@
     <string name="taxes_and_fees">세금 및 수수료</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">포함됨</string>
-    <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">호텔에 지불하는 요금</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">할인</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
