--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -41,6 +41,8 @@
     <string name="cars_invalid_input_text">Informações inválidas</string>
     <!-- Text for generic error toolbar-->
     <string name="cars_error_text">Erro</string>
+    <!-- Text for toolbar on no search results -->
+    <string name="cars_no_results_text">Nenhum resultado</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Reservar</string>
     <!-- Text for viewing details-->
@@ -84,12 +86,16 @@
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
     <string name="calendar_car_desc_support_TEMPLATE">Suporte ao cliente da Expedia: %1$s e %2$s</string>
 
+    <!-- Label for hotel search toolbar -->
+    <string name="hotel_toolbar_title">Buscar hotéis</string>
+    <!-- Label for hotel suggestion -->
+    <string name="search_location">Buscar posição</string>
     <!-- Label for pickup location selector -->
     <string name="pick_up_location">Local de retirada</string>
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
-    <string name="same_as_pick_up">O mesmo da retirada</string>
+    <string name="drop_off_location">Devolução</string>
     <!-- Label for Car Search Screen header -->
-    <string name="dates_and_location">Localização e datas</string>
+    <string name="toolbar_search_cars">Buscar carros</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">Selecione as datas de retirada e devolução</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
@@ -102,6 +108,25 @@
     <string name="drop_off_same_as_pick_up">Em breve! Estamos trabalhando para adicionar viagens só de ida em uma versão futura.</string>
     <!-- Car search error -->
     <string name="error_car_search_message">Sua busca não obteve resultados. Tente novamente usando outros critérios de busca.</string>
+    <!-- Car no filtered search results -->
+    <string name="filter_no_car_search_results_message">Sua busca não obteve resultados. Tente reduzir o número de filtros.</string>
+    <!-- Transmission options filter label for a car rental -->
+    <string name="options">Opções</string>
+    <!-- Automatic transmission filter button-->
+    <string name="car_filter_automatic">Automático</string>
+    <!-- Manual transmission filter button-->
+    <string name="car_filter_manual">Manual</string>
+    <!-- Any transmission type filter button -->
+    <string name="car_filter_all">Todas</string>
+    <!-- Air conditioning option checkbox filter -->
+    <string name="car_filter_checkbox_air_conditioning">Ar-condicionado</string>
+    <!-- Unlimited mileage option checkbox filter -->
+    <string name="car_filter_checkbox_unlimited_mileage">Quilometragem ilimitada</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_types">Tipos de carro</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_vendors">Locadoras de carros</string>
+
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s ou semelhante</string>
@@ -166,6 +191,8 @@
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">Seu pagamento não foi processado. Verifique os detalhes do pagamento e tente novamente.</string>
+    <!-- Shown to a user when their ability to rent a specific car expires -->
+    <string name="error_cars_product_expired">Sua busca expirou. Selecione um horário de retirada válido.</string>
     <!-- Price changed button text that takes you back to checkout -->
     <string name="view_price_change">Ver alteração de preço</string>
     <!-- My Trips button that takes you to Itins -->
@@ -209,7 +236,7 @@
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
-    <string name="lx_search_widget_heading">Localização e datas</string>
+    <string name="lx_search_title">Buscar atividades</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Selecione data</string>
     <!-- Activity details highlights heading -->
@@ -536,7 +563,7 @@
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Insira as informações de contato</string>
     <!-- LX search error -->
-    <string name="error_lx_search_message">Sua busca não obteve resultados. Tente novamente usando outros critérios de busca.</string> 
+    <string name="error_lx_search_message">Sua busca não obteve resultados. Tente novamente usando outros critérios de busca.</string>
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">Não foi possível determinar sua localização atual para encontrar atividades perto de você.</string> 
     <!-- Text for generic error toolbar-->
@@ -957,7 +984,7 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">Itinerário</string>
-    <!-- Shop-->
+    <!-- Shop -->
     <string name="shop">Reservar</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Buscar itinerário</string>
@@ -1825,7 +1852,7 @@
     <!-- Taxes and airline fees -->
     <string name="taxes_and_airline_fees">Impostos e taxas</string>
     <!-- Expedia booking fee -->
-    <string name="expedia_booking_fee">Taxa de reserva da Expedia</string>
+    <string name="brand_booking_fee">Taxa de reserva da {brand}</string>
     <!-- Label for a fee imposed on a flight booking that is due to processing the card -->
     <string name="airline_card_fee">Taxa de cartão da companhia aérea</string>
     <!-- Flight -->
@@ -1885,7 +1912,7 @@
     <!-- Born on colored -->
     <string name="born_on_colored_TEMPLATE">Data de nascimento %1$s</string>
     <!-- <brand> expiring <date> template -->
-    <string name="brand_expiring_TEMPLATE">&lt;font color="#38597D"&gt;%1$s&lt;/font&gt; expirando em %2$s</string>
+    <string name="brand_expiring_TEMPLATE">%1$s válido até %2$s</string>
 
     <!-- Section edit contact -->
     <!-- name on card hint -->
@@ -2014,7 +2041,7 @@
     <!-- Passport -->
     <string name="passport">Passaporte</string>
     <!-- Current traveler - <firstname> <lastname> -->
-    <string name="current_traveler_TEMPLATE">&lt;font color="#38597D"&gt;Viajante atual: &lt;/font&gt; %1$s %2$s</string>
+    <string name="current_traveler_TEMPLATE">Viajante atual: %1$s %2$s</string>
 
     <!-- Seat types -->
     <!-- Window seating preference -->
@@ -2061,6 +2088,8 @@
     <string name="hotels_in_TEMPLATE">Hotéis em %s</string>
     <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
     <string name="cars_in_TEMPLATE">Carros em %s</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Activities in San Francisco" -->
+    <string name="lx_in_TEMPLATE">Atividades em %s</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">Mais ações</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
@@ -2093,7 +2122,6 @@
     <string name="air_attach_add_hotel">Adicionar hotel</string>
     <!-- Air attach add hotel button subtitle -->
     <string name="air_attach_with_discounts">com descontos</string>
-
 
 
     <!-- Hotel confirmation page -->
@@ -2145,6 +2173,8 @@
     <string name="accept">Aceitar</string>
     <!-- Button label for retrying after getting an error -->
     <string name="retry">Tentar novamente</string>
+    <!-- Button label for adjusting filters after getting no results -->
+    <string name="edit_filters">Editar filtros</string>
     <!-- Button label for calling -->
     <string name="call_support">Assistência</string>
     <!-- Error shown to user if the flight's price has increased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
@@ -2321,6 +2351,8 @@
     <string name="tonight_only">Somente esta noite!</string>
     <!-- Expedia sponsored listing -->
     <string name="sponsored">Patrocinado</string>
+    <!-- Expedia ETP book now/pay later search results -->
+    <string name="book_now_pay_later">Reserve agora, pague depois</string>
     <!-- Search range error message template. %1$s = max search length. e.g. "We're sorry, but we are unable to search for hotel stays longer than 28 days." -->
     <string name="hotel_search_range_error_TEMPLATE">Não podemos pesquisar hotéis para estadias de mais de %1$s dias.</string>
     <!-- Search Error title text "Search Error" -->
@@ -2636,8 +2668,6 @@
     <string name="more_info">Mais informações</string>
 
     <!-- Booking info -->
-    <!-- Label for room type -->
-    <string name="room_type">Tipo de quarto</string>
     <!-- Error if we couldn't find the room type details -->
     <string name="error_room_type_nonexistant">Não foi possível encontrar mais informações para este quarto.</string>
     <!-- Quantity for the length of stay -->
@@ -2682,8 +2712,6 @@
     <string name="taxes_and_fees">Impostos e taxas</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Incluídos</string>
-    <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">Taxas pagas ao hotel</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Desconto</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
